added task counter per filter

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
           </div>
         </div>
         <div class="tabs">
-          <div class="tab-divs">
-            <div class="tab active" data-tab="all">
-              All Tasks<span class="num-of-tasks"></span>
-            </div>
-            <div class="tab" data-tab="active">Active</div>
-            <div class="tab" data-tab="completed">Completed</div>
+          <div class="tab active" data-tab="all">
+            All Tasks<span class="num-of-tasks"></span>
+          </div>
+          <div class="tab" data-tab="active">
+            Active <span class="num-of-active-tasks"></span>
+          </div>
+          <div class="tab" data-tab="completed">
+            Completed <span class="num-of-completed-tasks"></span>
           </div>
         </div>
       </div>
