--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                   placeholder="Enter task description"
                 ></textarea>
               </div>
+              <div class="form-group">
+                <label for="task-date">Task Date</label>
+                <input
+                  type="date"
+                  id="task-date"
+                  placeholder="Enter task date"
+                />
+              </div>
             </div>
             <div class="footer">
               <button type="submit" class="add">
